--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
-node_modules
-dist
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist/
+build/
+.cache/
+
+# Local env files
+.env
+.env.local
+.env.*.local
+
+# Replit
+.replit
+*.replit
+
+# OS / system files
 .DS_Store
-server/public
-vite.config.ts.*
+Thumbs.db
+
+# Tarballs
 *.tar.gz
+
+# Optional: exclude Vite cache
+.vite/
+
+# Public files generated at runtime
+server/public
